--- a/eShop.MVC/Areas/Auth/Views/_ViewImports.cshtml
+++ b/eShop.MVC/Areas/Auth/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using eShop.MVC
-@using eShop.BLL.ViewModels
+﻿@using eShop.MVC;
+@using eShop.BLL.ViewModels;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
