--- a/eShop.MVC/Views/Shared/_Layout.cshtml
+++ b/eShop.MVC/Views/Shared/_Layout.cshtml
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>eShop Homepage</title>
+    <title>@ViewData["Title"] - eShop</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="~/assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="~/assets/online-shop.ico" />
     <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" 
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <!-- SWAL icons-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+    @await RenderSectionAsync("style", required: false)
 </head>
 <body class="d-flex flex-column">
     <div class="loading-bar" id="loadingBar"></div>
@@ -36,24 +39,25 @@
                 <!-- Left Navigation -->
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" asp-area="" asp-controller="Home" asp-action="Index">
+                        <a class="nav-link active" asp-controller="Home" asp-action="Index">
                             <i class="bi bi-house me-1"></i>Home
                         </a>
                     </li>
+                    <!-- product section -->
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Products" asp-action="Index">
+                        <a class="nav-link" asp-area="product" asp-controller="AdminProducts" asp-action="Index">
                             <i class="bi bi-grid me-1"></i>Products
                         </a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">
+                        <a class="nav-link" asp-controller="Home" asp-action="About">
                             <i class="bi bi-info-circle me-1"></i>About
                         </a>
                     </li>
                 </ul>
 
                 <!-- Search Bar (Desktop) -->
-
                 @* <div class="search-container d-none d-lg-block me-3">
                     <div class="position-relative">
                         <i class="bi bi-search search-icon"></i>
@@ -202,7 +206,7 @@
             }
         };
     </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     @await RenderSectionAsync("Scripts", required: false)
     @await Component.InvokeAsync("NToastNotify")
 </body>
