--- a/src/eShop.MVC/Areas/Auth/Views/Auth/Login.cshtml
+++ b/src/eShop.MVC/Areas/Auth/Views/Auth/Login.cshtml
@@ -4,6 +4,18 @@
     ViewData["Title"] = "Login";
 }
 <link rel="stylesheet" href="~/css/Login.css" asp-append-version="true" />
+<div>
+ super admin UserName: superadmin@gmail.com
+</div>
+<div>
+ super admin Password: superadmin@gmail.com
+</div>
+<div>
+ UserName: user@gmail.com
+</div>
+<div>
+ Password: user@gmail.com
+</div>
 
 <section class="vh-100 d-flex align-items-center" style="background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);">
     <div class="container">
