--- a/src/eShop.MVC/Areas/Auth/Views/_ViewImports.cshtml
+++ b/src/eShop.MVC/Areas/Auth/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using eShop.MVC;
 @using eShop.BLL.ViewModels;
+@using eShop.BLL.ViewModels.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
