--- a/src/eShop.MVC/Views/Shared/AccessDenied.cshtml
+++ b/src/eShop.MVC/Views/Shared/AccessDenied.cshtml
@@ -62,7 +62,7 @@
                     <div class="forbidden-actions">
                         @if (!User.Identity.IsAuthenticated)
                         {
-                            <a href="/Identity/Account/Login" class="btn-action btn-gradient">
+                            <a href="/Login" class="btn-action btn-gradient">
                                 <i class="bi bi-box-arrow-in-right me-2"></i>
                                 Sign In
                             </a>
