add controller for manage roles for users and configure background job for add role for user temporarily

--- a/src/eShop.MVC/Areas/Auth/Views/Auth/Index.cshtml
+++ b/src/eShop.MVC/Areas/Auth/Views/Auth/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using eShop.BLL.ViewModels.Account
-@model AccountDataViewModel
+@model AccountViewModel
 @{
     ViewData["Title"] = "Profile";
 }
